vm/snapshots/vm-arrays-primitives-set_out_of_bound_array_index_should_throw_err-SetOutOfBoundArrayIndexShouldThrowErrMain.class.snap
---
source: vm/src/main.rs
expression: "&combined"
---
----- STDOUT -----

----- STDERR -----
java.lang.ArrayIndexOutOfBoundsException: Index 2 out of bounds for length 1
	at arrays.primitives.set_out_of_bound_array_index_should_throw_err.SetOutOfBoundArrayIndexShouldThrowErrMain.main(SetOutOfBoundArrayIndexShouldThrowErrMain.java:5)
