vm/snapshots/vm-exceptions-java_assert-JavaAssertShouldThrowErrMain.class.snap
---
source: vm/src/main.rs
expression: "&combined"
---
----- STDOUT -----

----- STDERR -----
java.lang.AssertionError: Error message
	at exceptions.java_assert.JavaAssertShouldThrowErrMain.main(JavaAssertShouldThrowErrMain.java:5)
