vm/snapshots/vm-exceptions-npe-NpeErrMain.class.snap
---
source: vm/src/main.rs
expression: "&combined"
---
----- STDOUT -----

----- STDERR -----
java.lang.NullPointerException: I want to see the stacktrace and error messages
	at exceptions.npe.NpeErrMain.method2(NpeErrMain.java:5)
	at exceptions.npe.NpeErrMain.method1(NpeErrMain.java:9)
	at exceptions.npe.NpeErrMain.main(NpeErrMain.java:13)
