vm/snapshots/vm-exceptions-npe-NpeShouldPrintStackTraceErrMain.class.snap
---
source: vm/src/main.rs
expression: "&combined"
---
----- STDOUT -----

----- STDERR -----
java.lang.NullPointerException: I want to see the stacktrace and error messages
	at exceptions.npe.NpeShouldPrintStackTraceErrMain.method2(NpeShouldPrintStackTraceErrMain.java:5)
	at exceptions.npe.NpeShouldPrintStackTraceErrMain.method1(NpeShouldPrintStackTraceErrMain.java:9)
	at exceptions.npe.NpeShouldPrintStackTraceErrMain.main(NpeShouldPrintStackTraceErrMain.java:13)
