vm/snapshots/vm-hello_world-HelloWorldOkMain.class.snap
---
source: vm/src/main.rs
expression: combined
---
----- STDOUT -----
Hello World!
----- STDERR -----
