vm/snapshots/vm-primitives-int_arithmetic_ok-IntArithmeticOkMain.class.snap
---
source: vm/src/main.rs
expression: combined
---
----- STDOUT -----
add.wrap:OK
sub.wrap:OK
mul.wrap:OK
neg.edge:OK
div.trunc.pos:OK
div.trunc.negA:OK
div.trunc.negB:OK
rem.sign.pos:OK
rem.sign.negA:OK
rem.sign.negB:OK
rem.sign.negBoth:OK
divrem.identity:OK
min.div.minus1:OK
min.rem.minus1:OK
shl.mask.32:OK
shl.mask.33:OK
shr.arith.neg:OK
shr.logic.neg:OK
shl.negative.count:OK
shr.mask.same:OK
bit.not:OK
bit.and:OK
bit.or:OK
bit.xor.self:OK
cast.i2b.256:OK
cast.i2s.65535:OK
cast.i2c.minus1:OK
cast.char.promote:OK
iinc.wrap:OK
cmp.signed.lt:OK
cmp.signed.ge:OK
cmp.eq:OK
cmp.ne:OK
TOTAL:33/33
----- STDERR -----
